--- a/index.html
+++ b/index.html
@@ -724,19 +724,19 @@
         <div class="spec-container">
           <div class="spec-item">
             <span class="spec-label">Titre</span>
-            <span class="spec-value">Le Voyage sur la Lune</span>
+            <span class="spec-value">La Rencontre avec Ronaldo</span>
           </div>
           <div class="spec-item">
             <span class="spec-label">Héros</span>
-            <span class="spec-value">Léo</span>
+            <span class="spec-value">Moumen</span>
           </div>
           <div class="spec-item">
             <span class="spec-label">Âge du héros</span>
-            <span class="spec-value">6 Ans</span>
+            <span class="spec-value">8 Ans</span>
           </div>
           <div class="spec-item">
             <span class="spec-label">Thème</span>
-            <span class="spec-value">Espace / Aventure</span>
+            <span class="spec-value">Football / Inspiration</span>
           </div>
           <div class="spec-item">
             <span class="spec-label">Pages</span>
@@ -752,7 +752,7 @@
           </div>
           <div class="spec-item">
             <span class="spec-label">Référence</span>
-            <span class="spec-value">Ref: 004921</span>
+            <span class="spec-value">Ref: 007892</span>
           </div>
         </div>
 
@@ -766,7 +766,7 @@
       </div>
 
       <div class="back-footer">
-        <span>© 2025 STORY PLATFORM SUISSE</span>
+        <span>© 2024 STORY PLATFORM SUISSE</span>
         <span>DESIGNED IN ZURICH</span>
         <span>ALL RIGHTS RESERVED</span>
       </div>
